name:                aniweb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/laurmurclar/aniweb#readme
license:             BSD3
license-file:        LICENSE
author:              Laura Murphy-Clarkin
maintainer:          laurmurclar@gmail.com
copyright:           Copyright (c) 2016 Laura Murphy-Clarkin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Appearance
                     , Shapes
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , text
                     , blaze-svg
                     , blaze-markup
  default-language:    Haskell2010

executable aniweb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aniweb
                     , scotty
                     , text
                     , blaze-svg
                     , blaze-markup
  default-language:    Haskell2010

test-suite aniweb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aniweb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/laurmurclar/aniweb
